// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntegrationLink component renders a disabled link when href is undefined 1`] = `
<EuiFlexGroup
  responsive={false}
>
  <EuiFlexItem
    grow={false}
  >
    <EuiToolTip
      content="Required data for this integration was not found."
      delay="regular"
      position="top"
    >
      <EuiIcon
        type="apmApp"
      />
    </EuiToolTip>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiText
      color="subdued"
    >
      click for bar
    </EuiText>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`IntegrationLink component renders without errors 1`] = `
<EuiLink
  aria-label="foo"
  href="/app/foo?kuery=localhost"
>
  <EuiFlexGroup
    responsive={false}
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="info for bar"
        delay="regular"
        position="top"
      >
        <EuiIcon
          type="apmApp"
        />
      </EuiToolTip>
    </EuiFlexItem>
    <EuiFlexItem>
      click for bar
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiLink>
`;
